# cpp-simplifier

./: .gitignore  .travis.yml  LICENCE  LICENSE  README.md  THIRD_PARTY_FILES.md  c-tree-carver.install  c-tree-carver.opam  conf-clang-12.opam  conf-clang-12.opam.template  dune-project
cmake/: FindLLVM.cmake
comment-simplifier/: dune-project
comment-simplifier/lib/: comment_simplifier.ml  lexer.mll
comment-simplifier/test/: dune  ignored_backslash_eof.c  ignored_eof.c  ignored_line_block_com.c  ignored_line_block_com_esc_newline.c  ignored_line_block_com_esc_newline_ignored.c  ignored_line_block_com_esc_newline_non_empty.c  ignored_line_block_com_newline_ignored.c  ignored_line_block_com_newline_non_empty.c  ignored_line_block_com_non_empty.c  ignored_line_block_com_non_empty_backslash.c  ignored_line_block_com_non_empty_esc_newline.c  ignored_line_block_com_non_empty_esc_newline_ignored.c  ignored_line_esc_newline_block_com_esc_newline.c  ignored_line_esc_newline_ignored.c  ignored_line_non_empty.c  ignored_line_non_empty_backslash.c  ignored_line_non_empty_block_com.c  ignored_line_non_empty_block_com_esc_newline.c  ignored_line_non_empty_esc_newline.c  ignored_line_non_empty_esc_newline_ignored.c  kept_esc_newline_block_com_esc_newline.c  kept_line_comment.c  kept_line_comment_backslash.c  kept_line_comment_esc_newline.c  kept_line_comment_esc_newline_ignored.c
cpp/: .clang-tidy  dune
cpp/src/: CMakeLists.txt  debug.hpp  debug_printers.cpp  debug_printers.hpp  kept_lines.hpp  main.cpp  reachability_analyzer.cpp  reachability_analyzer.hpp  reachability_marker.hpp  simplifier.cpp  simplifier.hpp  source_marker.hpp  source_range_hash.hpp  traverser.hpp
cpp/test/: run_test.py
cpp/test/array/: array_initialiser.in.c  array_initialiser.out.c
cpp/test/cxx_record/: constructor.out.cpp  meta_field_exists_false.out.cpp  specialization_in_namespace.in.cpp  template_partial_specialization.out.cpp
cpp/test/function/: function_template.out.cpp  normal_functions.out.cpp  returning_auto.in.cpp  returning_auto.out.cpp
cpp/test/macro/: empty.out.cpp  nested_newline_string.in.c  nested_newline_string.out.c  newline_string.out.c  token_paste.out.c
cpp/test/record/: constant_member.out.cpp  in_class_initializer.out.cpp  nested_record.out.cpp
cpp/test/to-add/: struct_fields.c  struct_fields.h
cpp/test/typedef/: normal_typedef.out.cpp
etc/: BSD-2-Clause  apply_headache.sh  clear_headache.sh  headache_config
lib/: comment_simplifier.ml  dune  lexer.mll
src/: CMakeLists.txt  debug.hpp  inclusion_unroller.cpp  inclusion_unroller.hpp  main.cpp  reachability_analyzer.cpp  reachability_analyzer.hpp  reachability_marker.hpp  simplifier.cpp  simplifier.hpp  syntax_checker.cpp  syntax_checker.hpp
test/: dune  make_compile_commands.sh  run_test.py  test.ml
test/array/: array_initialiser.in.c  array_initialiser.out.c
test/cxx_record/: accessibility.out.cpp  meta_field_exists_true.out.cpp  specialization_in_namespace.out.cpp  template.out.cpp  template_member.out.cpp  template_partial_specialization.in.cpp  template_partial_specialization.out.cpp
test/function/: function_template.in.cpp  function_template.out.cpp
test/macro/: empty.in.cpp  empty.out.cpp  macro_newline_string.in.c  nested_newline_string.out.c  newline_string.out.c  token_paste.out.c
test/record/: empty_record.out.cpp  field.out.cpp  in_namespace.in.cpp  in_namespace.out.cpp  oneliner.in.cpp  oneliner.out.cpp
test/simple/: global_variables.in.cpp  global_variables_initialization.in.cpp  global_variables_initialization.out.cpp  using_namespace.out.cpp
test/to-add/: array_init.c  macro_string_failing_fixme.c  tmp.c  token_paste.c
test/typedef/: alias_template.in.cpp  alias_template.out.cpp  normal_typedef.out.cpp  using.in.cpp  using.out.cpp
